After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 678938 - Selectable text for playing song interferes with dragging by toolbar
Selectable text for playing song interferes with dragging by toolbar
Status: RESOLVED FIXED
Product: rhythmbox
Classification: Other
Component: User Interface
HEAD
Other Linux
: Normal minor
: ---
Assigned To: RhythmBox Maintainers
RhythmBox Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-06-27 04:23 UTC by Dylan McCall
Modified: 2014-03-13 13:04 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch for rhythmbox's master branch, trading selectable text for a context menu with the current song info (17.65 KB, patch)
2013-05-06 01:17 UTC, Dylan McCall
rejected Details | Review
Screenshot of Rhythmbox with its new 'now playing' context menu (26.74 KB, image/png)
2013-05-07 23:41 UTC, Dylan McCall
  Details

Description Dylan McCall 2012-06-27 04:23:08 UTC
It is easy to move Rhythmbox's main window by clicking and dragging the toolbar, as is a nice little convention throughout the GNOME desktop. However, since Rhythmbox 2.97 any extra space on the toolbar is consumed by a label with selectable text. So, instead of being able to drag the window, clicking in that space selects the label. This is surprising and clunky feeling, because it is at odds with how toolbars _tend_ to behave — dragging empty space should affect the window itself.
Comment 1 André Klapper 2012-06-27 09:28:13 UTC
I prefer to have an easy way to copy the current artist and title.
What do you propose?
Comment 2 Dylan McCall 2013-05-06 01:17:13 UTC
Created attachment 243363 [details] [review]
Patch for rhythmbox's master branch, trading selectable text for a context menu with the current song info

Sorry to leave you waiting so long for an answer :)

I created a patch with the following:

 * The selectable text is no longer selectable.
 * There is now a context menu across the songinfo area, with the following options: "Copy Song Details", "Browse this Artist", and "Browse this Album".

Here are some examples of what happens when I choose "Copy Song Details":

 * "My Beloved Brontosaurus, plus Cannibals In The Womb, Slap-Happy Humpbacks, and more - 2013/05/04", by podcasting@cbc.ca from Quirks and Quarks Complete Show from CBC Radio
 * "15 Step", by Radiohead from In Rainbows, Disc 1
 * CBC Radio 2 - Pacific

For Browse this Artist and Browse this Album, we switch to either the source the current song is playing from (if it is a browser source), or to the main library source, and we adjust the filters for that source accordingly. Unfortunately that doesn't do what it sounds like when the current song is from a playlist, since a playlist is not a browser source, but I think it's a reasonable approach in general. (In the future, though, it would be nice if it was a little cleverer, for example by having something like "Browse this Feed" for podcasts).

There's also a branch you can play with over here:
https://github.com/DylanMcCall/rhythmbox-songinfo-context-menu
Right now it's based on a very unhappy, crash-prone revision. I'll rebase it soon :)
Comment 3 Dylan McCall 2013-05-06 02:46:29 UTC
Okay, just to clarify about that instability I was seeing. That crashing was just on one system, and not related to the patch: some old settings causing a conflict. (Probably a bug somewhere, maybe related to a downstream patch. In retrospect, I should have held on to that core file). I fixed it with "gsettings reset-recursively org.gnome.rhythmbox". Now dogfooding excitedly :)
Comment 4 Dylan McCall 2013-05-07 23:41:47 UTC
Created attachment 243551 [details]
Screenshot of Rhythmbox with its new 'now playing' context menu
Comment 5 Jonathan Matthew 2013-05-14 22:12:45 UTC
I don't like this at all.
Comment 6 Dylan McCall 2013-05-20 02:54:34 UTC
Any chance you could clarify, Jonathan?

If it's my patch you don't like, I'm happy to fix it or rewrite it. If it's the design I came up with, I wonder if we can chat about it on the mailing list and explore other options? I don't mind implementing a different design, like a menu button, if it makes more sense. Alternatively, moving in the other direction, just changing the labels so they don't expand further than they need might do the trick. (Personally I'm not convinced that copying a song's name is a complex enough use case to justify or benefit from a whole text selection thing, but that would at least cause it to stay out of the way as long as it isn't a user's intent).
Comment 7 Jonathan Matthew 2014-03-10 22:55:47 UTC
The problem I have with this is that you're changing the way a common widget behaves in one isolated instance, with no indication that there's anything different about it, hiding a normal behaviour in a context menu, and adding random stuff to that menu just to fill in space. I don't see a reason to do any of that.

I'm not at all opposed to adding a menu for actions relating to the playing track, but it needs to be more visible than this, and it needs a bit more planning.
Comment 8 Jonathan Matthew 2014-03-13 13:04:34 UTC
commit 8c3cc18 does the obvious thing to fix this